--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <title>Clauberson da Silva Pinheiro</title>
     
@@ -7,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Currículo HTML5 Bootstrap>
+    <meta name="description" content="Currículo HTML5 Bootstrap">
     <meta name="author" content="Clauberson Pinheiro">    
     <link rel="shortcut icon" href="favicon.ico">  
     <!-- Google Font -->
