--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: claubersonpinheiro@gmail.com">claubersonpinheiro@gmail.com</a></li>
-                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:(21) 98308 7630">(21)9 8308 7630</a></li>
+                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:(21) 98308 7630">(21) 98308 7630</a></li>
                     <!--
                     <li class="website"><i class="fas fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
                     -->
