--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         <div class="company">Fornax Consultoria</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Principais atividades exercidas: Análise e desenvolvimento de software.</p>  
-                        <p>Ferramentas utilizadas: Java 8, JavaScript, AngularJS.</p>
+                        <p>Principais atividades exercidas: Líder técnico e desenvolvedor de software.</p>  
+                        <p>Ferramentas utilizadas: Java 8, Spring Boot, Spring MVC, JavaScript, AngularJS.</p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
