--- a/index.html
+++ b/index.html
@@ -91,8 +91,22 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Engenheiro de Software</h3>
+                            <div class="time">19/04/2021 - Atualmente</div>
+                        </div><!--//upper-row-->
+                        <div class="company">SmartDev</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Principais atividades exercidas: Líder técnico e desenvolvedor de software.</p>  
+                        <p>Ferramentas utilizadas: Java 11, GCP, Spring Boot, Spring MVC, JavaScript, AngularJS.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Consultor de TI</h3>
-                            <div class="time">02/01/2018 - Presente</div>
+                            <div class="time">02/01/2018 - 09/04/2021</div>
                         </div><!--//upper-row-->
                         <div class="company">Fornax Consultoria</div>
                     </div><!--//meta-->
