--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <title>Clauberson Pinheiro Líder Técnico Especialista em Java</title>
+    <title>Clauberson Pinheiro Engenheiro de Software Backend</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Currículo Clauberson Pinheiro Líder Téncico Java">
+    <meta name="description" content="Currículo Clauberson Pinheiro Engenheiro de Software Backend">
     <meta name="author" content="Clauberson Pinheiro">    
     <link rel="shortcut icon" href="favicon.ico">  
     <!-- Google Font -->
