Corrige acentuacao em secoes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2 class="container-block-title">Linguagens</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Português <span class="lang-desc">(Nativo)</span></li>
-                    <li>Ingles <span class="lang-desc">(Intermediário)</span></li>
+                    <li>Inglês <span class="lang-desc">(Intermediário)</span></li>
                     <!-- <li>Spanish <span class="lang-desc">(Professional)</span></li> -->
                 </ul>
             </div><!--//interests-->
@@ -86,7 +86,7 @@
             </section><!--//section-->
             
             <section class="section experiences-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiencias Profissionais</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiências Profissionais</h2>
                 
                 <div class="item">
                     <div class="meta">
