--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/profile.png" alt="Foto de Clauberson Pinheiro" />
                 <h1 class="name">Clauberson Pinheiro</h1>
                 <h3 class="tagline">Analista de Sistemas Sênior</h3>
             </div><!--//profile-container-->
