Add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Currículo Clauberson Pinheiro Engenheiro de Software Backend">
     <meta name="author" content="Clauberson Pinheiro">    
+    <meta property="og:title" content="Clauberson Pinheiro - Engenheiro de Software Backend">
+    <meta property="og:description" content="Currículo e informações profissionais de Clauberson Pinheiro, Engenheiro de Software Backend">
+    <meta property="og:image" content="https://clauberson.github.io/assets/images/profile.png">
+    <meta property="og:url" content="https://clauberson.github.io">
     <link rel="shortcut icon" href="favicon.ico">  
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
